fix animated background being too persistent when scrolling through too long of an article

--- a/src/components/generics.scss
+++ b/src/components/generics.scss
@@ -1,5 +1,4 @@
 $content-padding: 50px;
-$mobile-padding: 20%;
 $content-width: 90%;
 
 a {
@@ -253,7 +252,7 @@ h2, h3, h4 {
       .blog-post-content {
         padding: 0px 5px 20px 5px;
         background: rgb(255,255,255);
-        background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) $mobile-padding, rgba(255,255,255,1) 100%);
+        background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.7) 200px, rgba(255,255,255,1) 500px, rgba(255,255,255,1) 100%);
         .gatsby-resp-image-wrapper {
           width: 100% !important;
           left: initial !important;
